--- a/css/main.css
+++ b/css/main.css
@@ -261,3 +261,13 @@ textarea {
   }
 }
 
+/*
+HADAR
+ */
+
+#data-engineering-daily-logo {
+  border: 2px solid black;
+  border-radius: 12px;
+  padding: 1rem;
+  margin: 1rem;
+}
