--- a/css/main.css
+++ b/css/main.css
@@ -265,9 +265,20 @@ textarea {
 HADAR
  */
 
+.top-nav {
+  display: inline-flex;
+}
+
 #data-engineering-daily-logo {
   border: 2px solid black;
-  border-radius: 12px;
+  border-radius: 25px;
   padding: 1rem;
   margin: 1rem;
+  opacity: 1;
+  transition: 0.5s;
+}
+
+#data-engineering-daily-logo:hover {
+  opacity: 0.9;
+  background-color: lightblue;
 }
