--- a/css/about.css
+++ b/css/about.css
@@ -5,3 +5,11 @@
     margin: 2rem;
     font-size: 1.2rem;
 }
+
+.award {
+    display: block;
+    margin: 1rem auto;
+    width: 350px;
+    height: auto;
+    border: 2px groove slategrey;
+}
