--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+
 .top-section {
   background-color: rgba(38, 76, 114, 0.15);
   border-bottom: 2px outset cadetblue;
