--- a/css/index.css
+++ b/css/index.css
@@ -24,26 +24,43 @@ li.hot-discussions {
     display: inline-block;
     position: relative;
     border: 2px solid dimgrey;
+    border-radius: 1rem;
     height: fit-content;
     width: fit-content;
     margin-top: 4rem;
     margin-bottom: 4rem;
+    padding: 2rem;
 }
 
 .newsitem {
     position: absolute;
+    height: fit-content;
+    width: fit-content;
     visibility: hidden;
     vertical-align: middle;
     opacity: 0;
     transition: visibility 1s linear, opacity 1s ease-in-out;
-    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.4);
 }
 
 .newsitem.active {
     position: relative;
+    height: fit-content;
+    width: fit-content;
     visibility: visible;
     vertical-align: middle;
     opacity: 1;
     transition: visibility 1s linear, opacity 1s ease-in-out;
-    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.4);
+}
+
+.newsitem img {
+    border: 1px solid rgba(20, 25, 50, 0.1);
+    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+.vr {
+    border-left: 0.5rem solid rgba(20, 25, 50, 0.3);
+    border-radius: 100rem;
+    height: 330px;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
