--- a/css/index.css
+++ b/css/index.css
@@ -24,19 +24,22 @@ li.hot-discussions {
     margin-left: 1rem;
 }
 
-#newsbox-homepage {
+.slidebox-homepage {
     display: inline-block;
     position: relative;
-    border: 2px solid dimgrey;
-    border-radius: 1rem;
     height: fit-content;
     width: fit-content;
     margin-top: 2rem;
     margin-bottom: 2rem;
+}
+
+.slidebox-news {
+    border: 2px solid dimgrey;
+    border-radius: 1rem;
     padding: 2rem;
 }
 
-.newsitem {
+.slideitem {
     position: absolute;
     height: fit-content;
     width: fit-content;
@@ -46,7 +49,7 @@ li.hot-discussions {
     transition: visibility 1s linear, opacity 1s ease-in-out;
 }
 
-.newsitem.active {
+.slideitem.active {
     position: relative;
     height: fit-content;
     width: fit-content;
@@ -56,8 +59,14 @@ li.hot-discussions {
     transition: visibility 1s linear, opacity 1s ease-in-out;
 }
 
-.newsitem img {
+.slideitem-news {
     border: 1px solid rgba(20, 25, 50, 0.2);
+    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+.slideitem-events {
+    border: 2px groove slategrey;
+    border-radius: 5rem;
     box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
 }
 
@@ -69,23 +78,15 @@ li.hot-discussions {
     margin-right: 3rem;
 }
 
-.video-row {
-    margin: 3rem;
+.arrow-button {
+    padding: 0;
+    border: none;
+    background: none;
+    text-decoration: none;
+    font-size: 8rem;
+    color: dimgrey;
 }
 
-.video-container {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 56.25%;
-}
-
-.video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 2px solid dimgrey;
-    border-radius: 2rem;
+.arrow-button:hover {
+    color: darkslategrey;
 }
