--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ footer {
 #data-engineering-daily-logo {
     border: 2px solid black;
     border-radius: 25px;
+    background-color: rgba(63, 127, 191, 0.1);
     padding: 1rem;
     margin: 1rem;
     opacity: 1;
@@ -32,7 +33,7 @@ footer {
 }
 
 .nav-button-div {
-    margin: 5rem 0.5rem;
+    margin: 2.5rem 0.5rem;
 }
 
 .nav-button {
@@ -73,8 +74,14 @@ footer {
 
 .current-date-and-time {
     display: block;
-    border: 4px wave darkgray;
-    border-radius: 10px;
+    border: 1px ridge rgba(63, 127, 191, 0.1);
+    border-radius: 1rem;
+    background-color: rgba(12, 25, 38, 0.3);
+    padding: 1rem;
+    font-size: 1rem;
+    font-weight : bold;
+    text-shadow: 2px 2px black;
+    color: white;
 }
 
 .rss-feed-box {
