--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,3 @@
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: red;
-    color: white;
-    text-align: center;
-}
-
 #top {
     background-size: 100% 100%;
 }
@@ -120,4 +110,18 @@ a.nostyle:visited {
     text-decoration: inherit;
     color: inherit;
     cursor: auto;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(25, 51, 76, 0.9);
+    color: white;
+    text-align: center;
+}
+
+.social-media-button {
+    margin: 0.5rem;
 }
