--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+/* This CSS file is shared between all website pages, hence its name */
+
+/* Shared top section between all pages (navbar, logo, time etc.) */
+
 #top {
     background-size: 100% 100%;
 }
@@ -44,6 +48,8 @@
     transition: 0.3s;
 }
 
+/* Add little right arrow icons when hovering over the navigation bar buttons for a nice effect */
+
 .nav-button span:after {
     content: '\00bb';
     position: absolute;
@@ -62,6 +68,8 @@
     right: 0;
 }
 
+/* A small block at the right edge of the navigation bar displays the current date and time */
+
 .current-date-and-time {
     display: block;
     border: 1px ridge rgba(63, 127, 191, 0.1);
@@ -73,6 +81,13 @@
     text-shadow: 1px 1px black;
     color: white;
 }
+
+/*
+Hidden login modal that pops up when clicking on "member" content such as forums, blogs etc.
+DISCLAIMER:
+This specific login modal was taken from Bootstrap/W3Schools (don't remember which) and fit to my website
+I made very little changes to its styling
+*/
 
 .login {
     font-family: Arial, Helvetica, sans-serif;
@@ -130,30 +145,27 @@
     padding-top: 16px;
 }
 
-/* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
     padding-top: 60px;
 }
 
-/* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    margin: 5% auto 15% auto;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
 }
 
-/* The Close Button (x) */
 .close {
     position: absolute;
     right: 25px;
@@ -170,6 +182,7 @@
 }
 
 /* Add Zoom Animation */
+
 .animate {
     -webkit-animation: animatezoom 0.6s;
     animation: animatezoom 0.6s
@@ -195,6 +208,7 @@
 
 
 /* Change styles for span and cancel button on extra small screens */
+
 @media screen and (max-width: 300px) {
     span.psw {
         display: block;
@@ -205,6 +219,11 @@
         width: 100%;
     }
 }
+
+/*
+Newsletter ("Daily Digest") subscription modal - available when clicking on button that appears in the footer at all pages
+Unlike the previous modal, this one was my own work.
+*/
 
 .newsletter-subscription {
     padding: 9rem 0;
@@ -244,6 +263,8 @@
     color: #fff;
 }
 
+/* The marquee element that acts as an "RSS Feed slide" */
+
 .rss-feed-box {
     background-color: rgba(63, 191, 191, 0.3);
     border-bottom: 2px outset cadetblue;
@@ -270,6 +291,8 @@
     border-radius: 2rem;
 }
 
+/* Prevent auto styling of navigation bar buttons, I prefer my own styling */
+
 a.nostyle:link {
     text-decoration: inherit;
     color: inherit;
@@ -281,6 +304,8 @@ a.nostyle:visited {
     color: inherit;
     cursor: auto;
 }
+
+/* Footer is shared across all pages */
 
 footer {
     position: fixed;
